--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <video id="first_video_track" autoplay="autoplay" playsinline muted="muted">
             <source src="assets/mainVideo.mp4" type='video/mp4; codecs="H.264"'/>
             <source src="assets/mainVideo.webm" type='video/webm; codecs="vp8, vorbis"'/>
-
+		<source src="assets/mainVideo.mov" type='video/mov'/>
         </video>
     </div>
     <section id="main_contend_visib">
