--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="icon_skip_video">
 			<p class="skip">Skip video <span></span></p>
 		</div>
-        <video id="first_video_track"  playsinline muted="muted">
+        <video id="first_video_track" controls playsinline muted="muted">
             <source src="assets/mainVideo.mp4" type='video/mp4; codecs="H.264"'/>
             <source src="assets/mainVideo.webm" type='video/webm; codecs="vp8, vorbis"'/>
 		<source src="assets/mainVideo.mov" type='video/mov'/>
