remove but skip

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="block_video_but_skip">
-		<div class="icon_skip_video">
+		<!-- <div class="icon_skip_video">
 			<p class="skip">Skip video <span></span></p>
-		</div>
+		</div> -->
         <video id="first_video_track" width="100%" height="100%" controls playsinline muted="muted">
             <source src="assets/mainVideo.mp4" type='video/mp4; codecs="H.264"'/>
             <source src="assets/mainVideo.webm" type='video/webm; codecs="vp8, vorbis"'/>
-		<source src="assets/mainVideo.mov" type='video/mov'/>
+		    <source src="assets/mainVideo.mov" type='video/mov'/>
         </video>
     </div>
     <section id="main_contend_visib">
