--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<!-- <div class="icon_skip_video">
 			<p class="skip">Skip video <span></span></p>
 		</div> -->
-        <video id="first_video_track" width="100%" height="100%" controls playsinline muted="muted">
-            <source src="assets/mainVideo.mp4" type='video/mp4; codecs="H.264"'/>
-            <source src="assets/mainVideo.webm" type='video/webm; codecs="vp8, vorbis"'/>
+        <video id="first_video_track" width="100%" height="100%" controls muted="muted">
+            <source src="assets/mainVideo.mp4" type='video/mp4'/>
+            <source src="assets/mainVideo.webm" type='video/webm'/>
 		    <source src="assets/mainVideo.mov" type='video/mov'/>
         </video>
     </div>
