--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- <div class="icon_skip_video">
 			<p class="skip">Skip video <span></span></p>
 		</div> -->
-        <video id="first_video_track" width="100%" height="100%" controls muted="muted">
+        <video id="first_video_track" width="100%" height="100%" playsinline autoplay muted="muted">
             <source src="assets/mainVideo.mp4" type='video/mp4'/>
             <source src="assets/mainVideo.webm" type='video/webm'/>
 		    <source src="assets/mainVideo.mov" type='video/mov'/>
