--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="block_video_but_skip">
-		<!-- <div class="icon_skip_video">
+		<div class="icon_skip_video">
 			<p class="skip">Skip video <span></span></p>
-		</div> -->
+		</div>
         <video id="first_video_track" width="100%" height="100%" playsinline autoplay muted="muted">
             <source src="assets/mainVideo.mp4" type='video/mp4'/>
             <source src="assets/mainVideo.webm" type='video/webm'/>
